--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,7 @@
   --ifm-color-primary-lightest: #fd9d8d;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.navbar__logo {
+  height: 1.2rem;
+}
