--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -10,6 +10,11 @@
   overflow: hidden;
 }
 
+.heroBanner img {
+  height: 80px;
+  margin-bottom: 20px;
+}
+
 @media screen and (max-width: 996px) {
   .heroBanner {
     padding: 2rem;
