--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -34,12 +34,12 @@
 }
 
 /* API Menu Items */
-.api-method > .menu__link {
+.api-method > .menu__link, .api-method > .menu__list-item-collapsible > .menu__link {
   align-items: center;
   justify-content: start;
 }
 
-.api-method > .menu__link::before {
+.api-method > .menu__link::before, .api-method > .menu__list-item-collapsible > .menu__link::before {
   width: 50px;
   height: 20px;
   font-size: 12px;
@@ -55,32 +55,32 @@
   color: white;
 }
 
-.get > .menu__link::before {
+.get > .menu__link::before, .get > .menu__list-item-collapsible > .menu__link::before {
   content: "get";
   background-color: var(--ifm-color-primary);
 }
 
-.post > .menu__link::before {
+.post > .menu__link::before, .post > .menu__list-item-collapsible > .menu__link::before {
   content: "post";
   background-color: var(--openapi-code-green);
 }
 
-.delete > .menu__link::before {
+.delete > .menu__link::before, .delete > .menu__list-item-collapsible > .menu__link::before {
   content: "del";
   background-color: var(--openapi-code-red);
 }
 
-.put > .menu__link::before {
+.put > .menu__link::before, .put > .menu__list-item-collapsible > .menu__link::before {
   content: "put";
   background-color: var(--openapi-code-blue);
 }
 
-.patch > .menu__link::before {
+.patch > .menu__link::before, .patch > .menu__list-item-collapsible > .menu__link::before {
   content: "patch";
   background-color: var(--openapi-code-orange);
 }
 
-.head > .menu__link::before {
+.head > .menu__link::before, .head > .menu__list-item-collapsible > .menu__link::before {
   content: "head";
   background-color: var(--ifm-color-secondary-darkest);
 }
