--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -126,8 +126,23 @@
 }
 
 .docItemContainer_node_modules-docusaurus-theme-openapi-docs-lib-next-theme-ApiItem-Layout-styles-module h2:first-child {
-  --ifm-h2-font-size: 3rem;
+  font-size: 3rem;
   margin-top: 0px;
+}
+
+.docItemCol_node_modules-docusaurus-theme-openapi-docs-lib-next-theme-ApiItem-Layout-styles-module .docItemContainer_node_modules-docusaurus-theme-openapi-docs-lib-next-theme-ApiItem-Layout-styles-module h1 {
+  font-size: 3rem;
+  margin-top: 0px;
+}
+
+.docItemCol_node_modules-docusaurus-theme-openapi-docs-lib-next-theme-ApiItem-Layout-styles-module .docItemContainer_node_modules-docusaurus-theme-openapi-docs-lib-next-theme-ApiItem-Layout-styles-module h2 {
+  margin-top: calc(var(--ifm-h2-vertical-rhythm-top)*var(--ifm-leading));
+  font-size: var(--ifm-h2-font-size);
+}
+
+.docItemCol_node_modules-docusaurus-theme-openapi-docs-lib-next-theme-ApiItem-Layout-styles-module .docItemContainer_node_modules-docusaurus-theme-openapi-docs-lib-next-theme-ApiItem-Layout-styles-module .cardTitle_node_modules-\@docusaurus-theme-classic-lib-theme-DocCard-styles-module {
+  font-size: 1.2rem;
+  margin: var(--ifm-heading-margin-top) 0 var(--ifm-heading-margin-bottom) 0;
 }
 
 .markdown h1:first-child, .docItemContainer_node_modules-docusaurus-theme-openapi-docs-lib-next-theme-ApiItem-Layout-styles-module h2:first-child {
